--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest-watch-typeahead": "^1.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.4",
     "postcss": "^8.4.4",
@@ -150,6 +151,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "@types/react-router-dom": "^5.1.5",
     "gh-pages": "^2.2.0",
     "typescript": "^4.9.5"
